// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - BackEndRolePage renders correctly for /backend path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Robot />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/brag path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Robot
        pose="brag"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;

exports[`COMPONENT - BackEndRolePage renders correctly for /backend/confess path 1`] = `
<Page
  title="Back End Developer"
>
  <RoleBar
    label="Back End Developer"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        quote="Daily in 5 minutes and I'm still not sure what to say..."
      />
      <Robot
        pose="confess"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="backend"
  />
</Page>
`;
